--- a/src/components/Chat.css
+++ b/src/components/Chat.css
@@ -131,3 +131,24 @@
         width: 80%;
     }
 }
+
+
+@media only screen and (min-width:320px) and (max-width:480px){
+
+    .chat-parent{
+        margin-left: 60px;
+        margin-top: 80px;
+        padding-bottom: 100px;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .chat-left{
+        width: 100%;
+    }
+    
+    .chat-right{
+        padding-top: 60px;
+        width: 100%;
+    }
+}
