--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,3 +1,9 @@
+.parent{
+    /* height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center; */
+}
 .root{
     display: flex;
 }
@@ -104,10 +110,10 @@
     .batch{
         position:absolute;
         top:130px;
-        left: 250px;
-        font-size:16px;
-        background-color :#6CB4EE;
-        padding : 8px 16px;
+        left: 100px;
+        font-size:12px;
+        background-color :#88ee6c;
+        padding : 6px 14px;
         border-radius: 100px;
         color:white;
     }
@@ -118,8 +124,8 @@
 @media only screen and (min-width:320px) and (max-width:480px){
     .batch{
         position:absolute;
-        top:130px;
-        left: 100px;
+        top:180px;
+        left: 160px;
         font-size:12px;
         background-color :#6CB4EE;
         padding : 6px 14px;
@@ -128,6 +134,7 @@
     }
     .root{
         width: 100%;
+        /* padding-bottom: 50px; */
     }
     .right{
         width: 0%;
@@ -153,5 +160,10 @@
         font-weight: 700;
         font-size: 20px;
         margin: 20px 0;
+    }
+    .discuss-btn-container-home{
+        position: absolute;
+        bottom: 70px;
+        right: 45px;
     }
 }
