--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -188,30 +188,65 @@
 
     .buttons{
         flex-direction: column;
-        height: auto;
+        /* height: auto; */
+        /* background-color: yellow; */
+        z-index: 100;
+        padding-top: 150px;
     }
 
     .single-button{
-        border-top: 1px solid rgba(255, 255, 255, 0.555);
-        margin-top: 50px;
-        width: 100%;
-        border-top: 1px solid rgba(255, 255, 255, 0.555);
+        border-top: 2px solid rgba(255, 255, 255, 0.555);
+        margin-top: 2px;
+        width: 50%;
         text-align: center;
         margin-right: 0px;
         padding: 20px 0;
+        background-color: black;
+        z-index: 100;
+
+        border-radius: 10px;
+        box-shadow:0.3rem 0.3rem 0.5rem #e2e3e5, -0.2rem -0.2rem 0.5rem #f3f4f5;
+        
+        color: white;
+        font-size: 18px;
     }
 
     .menu-button-in-mobile{
         display: block;
         position: absolute;
-        right: 250px;
-        top: 7px;
+        right: 290px;
+        top: 20px;
         padding: 5px;
         color: #000;
-        font-size: 18px;
+        font-size: 30px;
     }
 
     .dheeraj-container{
         display: none;
+    }
+
+    .dheeraj-container-phone{
+        position: absolute;
+        display: flex;
+        top:20px;
+        right: 40px;
+    }  
+    
+    .dheeraj-phone{
+        font-family: 'Crimson Text', serif;
+        font-weight: 700;
+        font-size: 30px;
+    }
+
+    .dheeraj-phone-wrapper{
+        display: flex;
+    }
+
+    .dot-phone{
+        margin-top:22px;
+        background-color: orange;
+        height: 6px;
+        width: 6px;
+        border-radius: 100px;
     }
 }
