--- a/src/components/Discuss.css
+++ b/src/components/Discuss.css
@@ -21,3 +21,15 @@
     /* height: 100%; */
     /* height: 500px; */
 }
+.back-to-portfolio{
+    position: absolute;
+    left: 20px;
+    top:10px;
+    font-size: 40px;
+    background:linear-gradient( 95.2deg, rgba(173,252,234,1) 26.8%, rgba(192,229,246,1) 64% );
+    border-radius: 20%;
+    padding: 10px;
+    color: darkcyan;
+    cursor: pointer;
+}
+
